[gd_scene load_steps=27 format=2]

[ext_resource path="res://ThumbPad.tscn" type="PackedScene" id=1]
[ext_resource path="res://CrossHair.tscn" type="PackedScene" id=2]
[ext_resource path="res://MuzzleFlash.tscn" type="PackedScene" id=3]
[ext_resource path="res://Models/machinegun.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=5]
[ext_resource path="res://FightingButtons.tscn" type="PackedScene" id=6]
[ext_resource path="res://AmmoControl.tscn" type="PackedScene" id=7]
[ext_resource path="res://HealthBar.tscn" type="PackedScene" id=8]
[ext_resource path="res://bruhbruh.wav" type="AudioStream" id=12]
[ext_resource path="res://lmg_fire01.wav" type="AudioStream" id=17]
[ext_resource path="res://reload.ogg" type="AudioStream" id=18]
[ext_resource path="res://Models/jumppp22.ogg" type="AudioStream" id=19]
[ext_resource path="res://qubodupRatPain.wav" type="AudioStream" id=20]
[ext_resource path="res://arm1Pose.fbx" type="PackedScene" id=21]
[ext_resource path="res://Models/machinegun.dae" type="PackedScene" id=22]
[ext_resource path="res://slightscream-01.wav" type="AudioStream" id=23]
[ext_resource path="res://Sifismg.fbx" type="PackedScene" id=24]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 1.0

[sub_resource type="SphereMesh" id=3]

[sub_resource type="Animation" id=4]
resource_name = "PlayerAmin"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../../GunShot:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../..:Shoot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "PlayerAmin"
length = 0.4
loop = true
tracks/0/type = "transform"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray(  )
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -3.932, -170, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Reload"
tracks/0/type = "transform"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray(  )
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -3, -170, 0 ), Vector3( 30, -170, 0 ), Vector3( -3, -170, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.1, -0.06, -0.082 ), Vector3( 0.1, -0.09, -0.082 ), Vector3( 0.1, -0.06, -0.082 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../..:Ammo")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.99 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 30 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../..:Shoot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../../..:Reloading")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../../..:Decrease")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../../..:DoneReloading")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/8/type = "audio"
tracks/8/path = NodePath("../../../GunReload")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}
tracks/9/type = "value"
tracks/9/path = NodePath("../../../GunReload:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "audio"
tracks/0/path = NodePath("JumpSound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}
tracks/1/type = "value"
tracks/1/path = NodePath("JumpSound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../../GunShot:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CapsuleShape" id=9]

[node name="Player" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.54683, 3.95556 )
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 5 )
DoneReloading = true
Shoot = true

[node name="PlayerCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
enabled = true
collide_with_areas = true

[node name="CameraParent" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.365, 0 )

[node name="Camera" type="Camera" parent="CameraParent"]
transform = Transform( 1, 0, 0, 0, 1, 1.1921e-07, 0, -1.1921e-07, 1, 0, 3.281, 0 )
fov = 90.0
far = 10000.0

[node name="HitScan" type="RayCast" parent="CameraParent/Camera"]
transform = Transform( 1, 3.72529e-09, -1.78814e-07, -8.38192e-09, 1, -1.41562e-07, 1.49012e-07, 1.22935e-07, 1, -7.45058e-09, 4.76837e-07, -2.38419e-07 )
enabled = true
exclude_parent = false
cast_to = Vector3( 0, 0, -200 )
collide_with_areas = true

[node name="CenterContainer" parent="CameraParent/Camera" instance=ExtResource( 2 )]

[node name="Control" parent="CameraParent/Camera" instance=ExtResource( 8 )]

[node name="AmmoControl" parent="CameraParent/Camera" instance=ExtResource( 7 )]

[node name="machinegun2" parent="CameraParent/Camera" instance=ExtResource( 22 )]
transform = Transform( -0.0984808, 0.000908806, -0.017341, 0, 0.099863, 0.0052336, 0.0173648, 0.00515409, -0.0983459, 0.1, -0.06, -0.082 )
script = ExtResource( 4 )

[node name="Particles" type="Particles" parent="CameraParent/Camera/machinegun2"]
transform = Transform( 1, 0, 0, 1.77636e-15, 1, -7.10543e-15, 0, -7.10543e-15, 1, 0, 0, 0 )
visible = false
emitting = false
amount = 4
one_shot = true
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 3 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="CameraParent/Camera/machinegun2"]
anims/PlayerAmin = SubResource( 4 )

[node name="AnimationPlayer3" type="AnimationPlayer" parent="CameraParent/Camera/machinegun2"]
anims/PlayerAmin = SubResource( 5 )
anims/Reload = SubResource( 6 )

[node name="MuzzleFlash" parent="CameraParent/Camera/machinegun2" instance=ExtResource( 3 )]

[node name="arm1Pose" parent="CameraParent/Camera/machinegun2" instance=ExtResource( 21 )]
transform = Transform( 0.139079, -4.50933e-09, -0.0752927, 4.71689e-09, 0.15, -4.8605e-10, 0.0561886, -1.43056e-09, 0.186365, -0.14, 0, 0.069 )

[node name="MarginContainer" parent="CameraParent/Camera" instance=ExtResource( 6 )]

[node name="MarginContainer2" parent="CameraParent/Camera" instance=ExtResource( 1 )]

[node name="Sifismg" parent="CameraParent/Camera" instance=ExtResource( 24 )]
transform = Transform( -5.24143e-06, 0.0026168, -0.0499315, 0, 0.0499315, 0.0026168, 0.05, 2.74316e-07, -5.23425e-06, 0.17, -0.083, -0.165 )
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = 1.0
autoplay = true

[node name="GunReload" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = 5.0

[node name="AnimationPlayer3" type="AnimationPlayer" parent="."]
anims/Jump = SubResource( 7 )
anims/PlayerAmin = SubResource( 8 )

[node name="GunShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = 0.3

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = 3.0

[node name="Damage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = 3.0

[node name="ZombieDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = 2.0

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 9 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
